# www/html/api/swagger.yaml
@@ -1691,6 +1691,210 @@ paths:
           description: "Internal Server Error"
 
 
+  ################ Actions ################
+  /action:
+    get:
+      tags:
+      - "Actions"
+      produces:
+      - "application/json"
+      description: "Retrieves a list of all actions" 
+      operationId: listActions
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Action"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+    post:
+      tags:
+      - "Actions"
+      produces:
+      - "application/json"
+      consumes:
+      - "application/json"
+      description: "Creates a new action" 
+      operationId: createAction
+      parameters:
+        - in: body
+          name: output
+          description: "The action to create"
+          schema:
+            $ref: "#/definitions/Action"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Action"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+
+  /action/{id}:
+    get:
+      tags:
+        - "Actions"
+      produces:
+      - "application/json"
+      description: "Retrieves an action by ID" 
+      operationId: getActionById
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the action to return"
+        required: true
+        type: "integer"
+        format: "int32"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Action"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+
+    patch:
+      tags:
+        - "Actions"
+      produces:
+      - "application/json"
+      consumes:
+      - "application/json"
+      description: "Edits an existing action by ID" 
+      operationId: editAction
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the action to edit"
+          required: true
+          type: "integer"
+          format: "int32"
+        - in: body
+          name: output
+          description: "The action to edit"
+          schema:
+            $ref: "#/definitions/Action"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Action"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+    delete:
+      tags:
+      - "Actions"
+      produces:
+      - "application/json"
+      description: "Deletes an action by ID" 
+      operationId: deleteAction
+      security: 
+        - ApiKeyAuth: [] 
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the action to delete"
+        required: true
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "Success"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+
+  /input/{id}/action:
+    get:
+      tags:
+        - "Actions"
+        - "Inputs"
+      produces:
+      - "application/json"
+      description: "Retrieves an actions for the given Input ID" 
+      operationId: getActionByInputId
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the input to get actions"
+        required: true
+        type: "integer"
+        format: "int32"
+      security: 
+        - ApiKeyAuth: [] 
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Action"
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not Found"
+        500:
+          description: "Internal Server Error"
+
+
 
 ########################################################################
 ##    SECURITY                                                        ##
@@ -2334,4 +2538,27 @@ definitions:
         type: integer
         description: "Supplying breaker"
 
-      
+  Action:
+    type: object
+    required:
+      - id
+      - inputId
+      - outputId
+      - actionType
+    properties:
+      id:
+        type: integer
+        description: "Unique ID"
+      inputId:
+        type: integer
+        description: "ID of the input"
+      outputId:
+        type: integer
+        description: "ID of the output"
+      actionType:
+        type: string
+        description: "The action that will be taken on the output when the input is triggered"
+        enum:
+          - INCREASE
+          - DECREASE
+          - TOGGLE
